<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/helpServiceFragment"
        android:icon="@drawable/baseline_volunteer_activism_24"
        android:title="@string/help_service" />
    <item
        android:id="@+id/postFragment"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="@string/post" />
    <item
        android:id="@+id/aboutUsFragment"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/about_us" />
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/account" />
</menu>